otro cambio en la rama de prueba

--- a/6.html
+++ b/6.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Hola Mundo!</h1>
-        <h2>Un subtitulo</h2>
+        <h2>Un subtitulo..</h2>
         <h3>Otro subtitulo</h3>
         <p>Un parrafo con informacion importante</p>
         <label>Ingrese su Nombre</label>
