--- a/8.html
+++ b/8.html
@@ -5,7 +5,7 @@
         <title>Mi primer HTML</title>        
     </head>
     <body>
-        <h1>Hola Mundo!</h1>
+        <h1>Hola Mundo! =)</h1>
         <h2>Un subtitulo</h2>
         <h3>Otro subtitulo</h3>
         <p>Un parrafo con informacion importante</p>
