arregle la pagina 9

--- a/9.html
+++ b/9.html
@@ -4,7 +4,7 @@
     <title>Mi primer HTML</title>
     <meta charset="utf-8">
     <!-- esto es un comentario muy importante -->
-    <link rel="stylesheet" href="../otra-carpeta-nivel-superior/estilos/subcarpeta/estilos1.css">
+    <link rel="stylesheet" href="estilos1.css">
     </head>
     <body>
         <h1>Hola Mundo!</h1>
